Corrects CSS rules for contatct list overflowing with scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ display:inline-block; margin-left: 20px; margin-bottom: 5px;
 .people-list ul {
   padding: 20px;
   height: 575px;
-  overflow: scroll;
+  overflow: auto;
   /*box-shadow: inset 0 1px 2px 0 #6f7074;*/
 }
 .people-list ul li {
